[package]
name = "tide-server-timing"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/tide-server-timing"
documentation = "https://docs.rs/tide-server-timing"
description = "Server-Timing support for Tide + Tracing"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <yoshuawuyts@gmail.com>"
]

[features]

[dependencies]
tide = "0.13.0"
tracing-subscriber = "0.2.9"
tracing-core = "0.1.11"
tracing = "0.1.17"
tracing-futures = "0.2.4"
async-channel = "1.4.0"

[dev-dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
