[package]
name = "tide-server-timing"
version = "0.13.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/tide-server-timing"
documentation = "https://docs.rs/tide-server-timing"
description = "Server-Timing support for Tide + Tracing"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <yoshuawuyts@gmail.com>"
]

[features]

[dependencies]
tide = { version = "0.13.0", default-features = false, features = ["async-h1"] }
tracing-subscriber = "0.2.9"
tracing-core = "0.1.11"
tracing = "0.1.17"
tracing-futures = "0.2.4"
async-channel = "1.4.0"

# TODO: remove me
http-types = { version = "2.4.0", features = ["unstable"] }

[dev-dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
